--- a/main.tex
+++ b/main.tex
@@ -12,14 +12,19 @@
 \newpage
 
 
-\inputmulti{
-years/1415,
-years/1516,
-years/1617,
-years/1718,
-years/1819,
-years/1920,
-years/2021}
+\input{years/1415}
+\newpage
+\input{years/1516}
+\newpage
+\input{years/1617}
+\newpage
+\input{years/1718}
+\newpage
+\input{years/1819}
+\newpage
+\input{years/1920}
+\newpage
+\input{years/2021}
 
 
 
