--- a/years/1415.tex
+++ b/years/1415.tex
@@ -5,10 +5,25 @@
 An example of infinite dimensional vector space over a field is $\R[x]$, the set of polynomials with coefficients in $\R$.
 
 \subsubsection{Q1b}
+An vector space with exactly 16 elements is $\Z/16\Z=\{0,1,2,\ldots,15\}$
 \subsubsection{Q1c}
 
 \subsection{Question 2}
-
+Consider the matrix that represents $\mathcal{B}$
+\begin{align*}
+\mathcal{B}=&\ 	\begin{pmatrix}
+1  &1 & 1\\
+ 0 &1 &1 \\
+  0& 0&1 
+\end{pmatrix}\\
+\st{using gaussian elimination we find that }
+rref(\mathcal{B})=&\ \begin{pmatrix}
+1  &0 & 0\\
+ 0 &1 &0 \\
+  0& 0&1 
+\end{pmatrix}
+\st{or that $\dim{\mathcal{B}}=3$ so $\mathcal{B}$ spans $V=\R^3$}
+\end{align*}
 \subsection{Question 3}
 
 \subsection{Question 4}
