--- a/years/1920.tex
+++ b/years/1920.tex
@@ -3,4 +3,23 @@
 \subsection{Question 1}
 \subsection{Question 2}
 \subsection{Question 3}
+\subsubsection{Q3a}
+\paragraph{i)} Recall that the complex inner product has the following properties:
+\begin{align*}
+(\lambda \vec{x}+\mu\vec{y},\vec{z}) =&\ \lambda(\vec{x},\vec{z} )+\mu(\vec{y},\vec{z}) \tag{1}\\
+(\vec{x},\vec{y})=&\ \overline{(\vec{y},\vec{x})}\tag{2}\\
+(\vec{x},\vec{x})\geq &\ 0 \tag{3}
+\st{and $T$ being self adjoint}
+(T\vec{x},{y})=&\ (\vec{x},T\vec{y})
+\st{Thus, let $v$ be an eigenvector with eigenvalue $\lambda$.}
+\lambda (x,x) =&\ (x,\lambda x) \quad\textit{(property 1)}\\
+=&\ (x,T x) \quad\textit{(eigenvec property)}\\
+=&\ (T x,x) \quad\textit{(self adjoint prop)}\\
+=&\ (\lambda x, x) \quad\textit{(eigenvec propety)}\\
+=&\ \overline{\lambda}(x,x)\quad\textit{(property 1+2)}
+\st{implying that $\lambda=\overline{\lambda}$, which can only be true is $\lambda\in\R$.}
+\end{align*}
+
+
+
 \subsection{Question 4}
