--- a/preamble.tex
+++ b/preamble.tex
@@ -32,6 +32,7 @@
 }
 
 % MATH OPERATORS/SYMBOLS 
+\newcommand*\conj[1]{\bar{#1}}
 \DeclarePairedDelimiter\ceil{\lceil}{\rceil}
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 \newcommand{\qed}{$\hfill\square$}
