--- a/years/1920.tex
+++ b/years/1920.tex
@@ -4,7 +4,7 @@
 \subsection{Question 2}
 \subsection{Question 3}
 \subsubsection{Q3a}
-\paragraph{i)} Recall that the complex inner product has the following properties:
+\paragraph{(i)} Recall that the complex inner product has the following properties:
 \begin{align*}
 (\lambda \vec{x}+\mu\vec{y},\vec{z}) =&\ \lambda(\vec{x},\vec{z} )+\mu(\vec{y},\vec{z}) \tag{1}\\
 (\vec{x},\vec{y})=&\ \overline{(\vec{y},\vec{x})}\tag{2}\\
@@ -20,6 +20,6 @@
 \st{implying that $\lambda=\overline{\lambda}$, which can only be true is $\lambda\in\R$.}
 \end{align*}
 
-
+\paragraph{(ii)} 
 
 \subsection{Question 4}
