--- a/years/1920.tex
+++ b/years/1920.tex
@@ -16,10 +16,14 @@
 =&\ (x,T x) \quad\textit{(eigenvec property)}\\
 =&\ (T x,x) \quad\textit{(self adjoint prop)}\\
 =&\ (\lambda x, x) \quad\textit{(eigenvec propety)}\\
-=&\ \overline{\lambda}(x,x)\quad\textit{(property 1+2)}
+=&\ \overline{(x,\lambda x)} \quad\textit{(property 2)}\\
+=&\ (x,\overline{\lambda}x) \quad\textit{\textcolor{red}{(not sure why we can claim $x=\bar{x}$ here)}}\\
+=&\ \overline{\lambda}(x,x)\quad\textit{(property 1)}
 \st{implying that $\lambda=\overline{\lambda}$, which can only be true is $\lambda\in\R$.}
 \end{align*}
 
 \paragraph{(ii)} 
+The proof in (i) fails if $T$ is not self adjoint due to the fact that we cannot claim $(x,Tx)=(Tx,x)$ unless $T$ is self adjoint. 
+\paragraph{(iii)}
 
 \subsection{Question 4}
