--- a/preamble.tex
+++ b/preamble.tex
@@ -32,6 +32,16 @@
   \docsvlist{#1}% Process list
 }
 
+%href color
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=cyan,
+    pdftitle={Overleaf Example},
+    pdfpagemode=FullScreen,
+    }
+
 % MATH OPERATORS/SYMBOLS 
 \newcommand*\conj[1]{\bar{#1}}
 \DeclarePairedDelimiter\ceil{\lceil}{\rceil}
