--- a/years/2021.tex
+++ b/years/2021.tex
@@ -1,5 +1,33 @@
 \section{Exam 2020-2021}
 
 \subsection{Question 1}
+\subsubsection{Q1a}
+\textbf{F:} A \textbf{noncommutative ring} is a ring such that 
+\begin{align*}
+	a\cdot b \neq&\ b\cdot a 
+\end{align*}
+and an element in a ring is a \textbf{zero divisor} if there exists non-zero $b$ such that 
+\begin{align*}
+	ab=0 \quad \text{or}&\quad ba=0
+\end{align*}
+An example of this is $\mathbb{H}$: The ring of quaternions. \href{https://mathsci2.appstate.edu/~sjg/class/3110/mathfestalg2000/quaternions.html#:~:text=abelian\%20under\%20multiplication.-,Quaternions\%20are\%20Not\%20an\%20Integral,but\%20have\%20no\%20zero\%2Ddivisors.}{proof if interested}
+\subsubsection{Q1b}
+\textbf{F:} Example: $V=\R$, $W=\R$
+\begin{align*}
+f(x)=&\ \binom{x}{0}	\\
+g\binom{x}{y}=&\ 0	\\
+\end{align*}
+Since $g\circ f(x)=x$ but $\dim{V}\neq\dim{W}$
+
+
+\subsubsection{Q1c}
+Question can be rephrased as: Do $n\times n$ matrices with odd $n$ always have (a real) eigenvalue?\\
+\noindent\textbf{T:} because the characteristic polynomial will have an odd degree, by the intermediate value theorem (\href{https://math.stackexchange.com/questions/689575/proof-that-every-polynomial-of-odd-degree-has-one-real-root}{proof}), it must have at least one real root $\implies$ matrix has at one real eigenvalue.
+\subsubsection{Q1d}
+
+\textbf{F:}
+
+
+
 \subsection{Question 2}
 \subsection{Question 3}
