--- a/years/2021.tex
+++ b/years/2021.tex
@@ -147,7 +147,23 @@ q(x)m_A(x)\in&\ I_A
 q(A)m_A(A) =&\ q(A)\cdot 0\\
 =&\ 0
 \end{align*}
-\textcolor{red}{solutions claims it is closed under addition, not sure if the difference is meaningful, but we can prove that it is closed until substraction via the following:}
+\textcolor{red}{solutions claims it is closed under addition, not sure if the difference is meaningful, but we can prove that it is closed until subtraction via the following:}\\
+\begin{align*}
+\st{Consider $p,q\in F[x]$, clearly}
+p(x)m_A(x)\in&\ I_A \\
+\st{and}
+q(x)m_A(x)\in&\ I_A \\
+\st{Since}
+p(x)-q(x) \in&\ F[x]\\
+\st{and}
+(p(A)-q(A))m_A(A) =& (p(A)-q(A))0 \\
+=& 0 \\
+\st{so }
+(p(x)-q(x))m_A(x)\in&\ I_A 
+\st{and therefore $I_A$ is closed under subtraction}
+\end{align*} 
+
+
 
 
 \subsection{Question 3}
