--- a/years/2021.tex
+++ b/years/2021.tex
@@ -118,10 +118,10 @@ Consider the example $A=\begin{pmatrix}
 
 \subsection{Question 2}
 \subsubsection{Q2a}
-First notice that the polynomial $m_A(x)$ here is the characteristic polynomial.\\  $m_A(x)$ for $A=\begin{pmatrix}
+$m_A(x)$ for $A=\begin{pmatrix}
 	\lambda&0\\ 0& \lambda\end{pmatrix}$ is simply $x-\lambda$ because all the $\lambda$'s lie on the diagonal. so subtracting $\lambda I$ from $A$ would equal 0.\\ 	
-Calculating $m_A(x)$ for $A=\begin{pmatrix}
-	\lambda&1\\ 0& \lambda\end{pmatrix}$
+$m_A(x)$ for $A=\begin{pmatrix}
+	\lambda&1\\ 0& \lambda\end{pmatrix}$, not exactly sure how besides calculating characteristic polynomial.
 \begin{align*}
 \chi_A(x)=&\ \det(A-xI)\\
 =&\ \det \begin{pmatrix}
