Done some 1920 Q2 and 3

--- a/preamble.tex
+++ b/preamble.tex
@@ -47,11 +47,13 @@
 \DeclarePairedDelimiter\ceil{\lceil}{\rceil}
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 \newcommand{\qed}{$\hfill\square$}
-\DeclareMathOperator{\Tr}{Tr}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\st}[1]{\shortintertext{#1}}
-\DeclareMathOperator{\Ima}{Im}
+\DeclareMathOperator{\Tr}{Tr} % trace of matrix
+\DeclareMathOperator{\im}{im} % image of function
+\DeclareMathOperator{\Ima}{Im} % imaginary part of complex number
+\DeclareMathOperator{\Rea}{Re} % real part of complex number
